# fastapi_kwazar

./: .gitignore  COMMANDS.md  README.md  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 2024_07_19_1626-1a559339eae0_create_user_table.py  2024_07_20_0036-ce4f854b3cd5_create_user_vists_table.py
app/: config.py  main.py
app/api/: dependecies.py
app/database/: session.py
app/services/: unitofwork.py
app/tests/: test_users_api.py
app/users/: models.py  repository.py  routes.py  schema.py  service.py
app/utils/: repository.py
